force-app/main/default/objects/Diary__c/Diary__c.object-meta.xml
<CustomObject>
    <label>Diary</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Diary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>