force-app/main/default/objects/Diary__c/fields/Entry__c.field-meta.xml
<CustomField>
    <fullName>Entry__c</fullName>
    <label>Entry</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>