force-app/main/default/objects/Diary__c/fields/Session_Start__c.field-meta.xml
<CustomField>
    <fullName>Session_Start__c</fullName>
    <label>Session Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>